--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -15,15 +15,17 @@ pluginManagement {
         mavenCentral()
         gradlePluginPortal()
     }
-}
 
-buildscript {
-    repositories {
-        google()
-        mavenCentral()
+    plugins {
+        id 'com.android.application' version '7.3.0' apply false
+        id 'com.android.library' version '7.3.0' apply false
     }
 }
 
-include ':app'
+plugins {
+    id 'dev.flutter.flutter-plugin-loader'
+}
 
-apply from: "${settings.ext.flutterSdkPath}/packages/flutter_tools/gradle/app_plugin_loader.gradle"
+rootProject.name = 'android'
+
+include ':app'
